# semaphore

./: .gitignore  .gitmodules  .solhint.json  .travis.yml  AUTHORS  CMakeLists.txt  Makefile  README.md  appveyor.yml  package.json  requirements-dev.txt  requirements.txt  truffle.js
appendix/: .gitignore  Makefile  doublevision_biject.py  ejubjub.sage  immr.py  poly_biject_permute.py  poly_surgject_pidgeonhole.py  z3_test_poly.py
contracts/: EdDSA.sol  JubJub.sol  JubJubPublic.sol  LongsightF.sol  LongsightL.sol  MerkleTree.sol  Migrations.sol  Miximus.sol  Pairing.sol  SnarkUtils.sol  TestableMiximus.sol  Verifier.sol
ethsnarks/: contract_deploy.py  deploy.py  eddsa.py  field.py  helpers.py  jubjub.py  longsight.py  merkletree.py  mimc.py  numbertheory.py  off_chain_signal.py  on_chain_verification.py  pedersen.py  polyhash.py  r1cs.py  shamirspoly.py  utils.py  verifier.py
ethsnarks/cli/: proof2sol.py  vk2sol.py
ethsnarks/mod/: hashpreimage.py  miximus.py
examples/: helpers.py  off_chain_signal.py  on_chain_verification.py
migrations/: 1_initial_migration.js  2_deploy_contracts.js
snarkWrapper/: deploy.py  utils.py
src/: CMakeLists.txt  ethsnarks.hpp  export.cpp  export.hpp  hashpreimage_cli.cpp  import.cpp  import.hpp  main.cpp  miximus.cpp  miximus.hpp  miximus_cli.cpp  miximus_genKeys.cpp  miximus_verify.cpp  mod_hashpreimage.cpp  mod_hashpreimage_genKeys.cpp  mod_hashpreimage_prove.cpp  stubs.cpp  stubs.hpp  test_field_packing.cpp  test_hashpreimage.cpp  test_proof_raw2json.cpp  test_sha256_full_gadget.cpp  test_vkraw2json.cpp  tests.cpp  utils.cpp  utils.hpp  verify.cpp
src/ZoKrates/: wraplibsnark.cpp
src/gadgets/: CMakeLists.txt  longsightf.cpp  longsightf.hpp  longsightf_bits.cpp  longsightf_constants.cpp  longsightf_constants.hpp  longsightl.cpp  longsightl.hpp  longsightl_constants.cpp  longsightl_constants.hpp  merkle_tree.cpp  one_of_n.cpp  onewayfunction.hpp  sha256_full.cpp  shamir_poly.cpp
src/jubjub/: CMakeLists.txt  curve.cpp  curve.hpp  eddsa.hpp  eddsa.tcc  pedersen_commitment.cpp  pedersen_commitment.hpp
src/mod/: hashpreimage.cpp  hashpreimage.hpp  miximus.cpp  miximus.hpp
src/r1cs_gg_ppzksnark_zok/: CMakeLists.txt  r1cs_gg_ppzksnark_zok.hpp  r1cs_gg_ppzksnark_zok.tcc  r1cs_gg_ppzksnark_zok_params.hpp  r1cs_gg_ppzksnark_zok_pp.hpp
src/r1cs_gg_ppzksnark_zok/examples/: run_r1cs_gg_ppzksnark_zok.hpp  run_r1cs_gg_ppzksnark_zok.tcc
src/r1cs_gg_ppzksnark_zok/profiling/: profile_r1cs_gg_ppzksnark_zok.cpp
src/r1cs_gg_ppzksnark_zok/tests/: test_r1cs_gg_zok_ppzksnark.cpp
src/sha256/: sha256_ethereum.cpp  sha256_full_gadget.cpp  utils.cpp
src/test/: CMakeLists.txt  benchmark_mpz_mul.cpp  test_field_packing.cpp  test_hashpreimage.cpp  test_importexport.cpp  test_jubjub.cpp  test_load_proofkey.cpp  test_longsightf.cpp  test_longsightf_bits.cpp  test_longsightf_merkletree.cpp  test_longsightl.cpp  test_longsightl_hash_mp.cpp  test_merkle_tree.cpp  test_one_of_n.cpp  test_proof_raw2json.cpp  test_sha256_full_gadget.cpp  test_shamir_poly.cpp  test_shootout.cpp  test_vk_raw2json.cpp
test/: TestJubJub.js  TestJubJub.sol  TestLongsightF.sol  TestLongsightL.sol  TestMerkleTree.sol  TestMiximus.js  TestSnarkUtils.sol  TestVerifier.sol  disabled_test_proof.py  print_longsight_constants_cxx.py  test.py  test_bitstofields.py  test_eddsa.py  test_hashpreimage.py  test_jubjub.py  test_jubjub_lmask.py  test_longsight.py  test_merkle.py  test_mimc.py  test_miximus.py  test_one_of_n.py  test_pedersen.py  test_proof.py  test_shamir_poly.py  test_verify.py
tests/: test.py
utils/: fedora-deps.sh
zksnark_element/: .gitignore  vk.json
